# ai-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
app/database/: __init__.py  engine.py  models.py  repository.py
app/domain/: __init__.py  amenities.py  qatar.py
app/models/: schemas.py
app/scheduler/: __init__.py  scheduler.py
app/services/: __init__.py  ai.py  amenities_generator.py  completeness.py  coordinator.py  description.py  images.py  missing_info.py  notifications.py  property_parser.py  publisher.py  sheets.py
app/storage/: __init__.py  base.py  excel_store.py  locking.py
app/ui/: main_window.py  theme.py  widgets.py
app/ui/pages/: __init__.py  accounts.py  ai_settings.py  dashboard.py  logs.py  properties.py  scheduler.py  settings.py  statistics.py
app/utils/: retry.py  validators.py
app/web/: __init__.py  server.py
app/web/static/: index.html
config/: config.example.json
docs/: API.md  CONFIGURATION.md  DEVELOPER.md  INSTALL.md
examples/: example_sheet.csv  example_sheet.xlsx  intake_demo.py  make_example_workbook.py
tests/: conftest.py  test_ai.py  test_amenities.py  test_completeness.py  test_coordinator.py  test_description.py  test_engine.py  test_images.py  test_missing_info.py  test_oryx_client.py  test_oryx_reference.py  test_platforms.py  test_property_parser.py  test_repository.py  test_schemas.py  test_security.py  test_storage.py  test_validators.py  test_web.py
